[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "bankid-sdk"
version = "0.0.1"
description = "A Python SDK for BankID"
dependencies = [
  "abcattrs",
  "httpx",
]

[project.optional-dependencies]
dev = [
  "dirty-equals",
  "django-stubs",
  "freezegun",
  "mypy",
  "pre-commit",
  "pytest",
  "pytest-asyncio",
  "pytest-cov",
  "pytest-django",
  "pytest-randomly",
  "respx",
]

[tool.pytest.ini_options]
testpaths = ["tests", "src"]
addopts = "--cov --no-cov-on-fail"
asyncio_mode = "auto"

[tool.coverage.report]
skip_covered = true
show_missing = true
exclude_also = [
  # ignore non-implementations
  '^\s*\.\.\.',
  "if TYPE_CHECKING:",
  '^\s*(def\s)?assert_never(.*)$',
]
fail_under = 100

[tool.coverage.run]
branch = true
source = ["src/"]
omit = [
  "src/bankid_sdk/__version__.py",
]

[tool.mypy]
python_version = "3.9"
pretty = true
show_error_codes = true
files = "src, tests"
exclude = '''(?x)(
    ^src/bankid_sdk/__version__\.py$
)'''

no_implicit_optional = true
strict_optional = true
ignore_missing_imports = false
warn_unreachable = true
strict = true

[tool.black]
target-version = ["py39"]

[tool.ruff]
src = ["src", "tests"]
fix = true
target-version = "py39"
line-length = 88
select = [
  "B",
  "BLE",
  "C4",
  "C9",
  "C90",
  "DJ006",
  "DJ007",
  "DJ012",
  "DTZ",
  "E",
  "EXE",
  "F",
  "FA",
  "FBT",
  "I",
  "INP",
  "ISC",
  "PGH",
  "PIE",
  "PL",
  "PT",
  "PTH",
  "RET",
  "RSE",
  "RUF",
  "S",
  "SIM",
  "SLOT",
  "T10",
  "T20",
  "TID",
  "TRY",
  "UP",
  "W",
  "YTT"
]
ignore = [
  # We've deemed ourselves good designers of our interfaces and would only have
  # motivated ignores.
  "PLR0913",
  "RET505",  # Don't like this opinion
  "S101",
  "TRY003",  # Don't care about length of messages for exception classes
]

[tool.ruff.per-file-ignores]
"tests/**" = ["PLR2004", "S105", "S106"]

[tool.ruff.isort]
known-first-party = ["bankid_sdk", "tests"]
combine-as-imports = true
