[build-system]
build-backend = "hatchling.build"
requires = [
  "hatch-vcs",
  "hatchling",
]

[project]
name = "bankid-sdk"
description = "A Python SDK for BankID"
readme = "README.md"
keywords = [
  "bankid",
  "client",
  "django",
  "rest",
]
license = "BSD-3-Clause"
authors = [{ name = "Jonas Lundberg", email = "jonas@5monkeys.se" }]
requires-python = ">=3.9"
classifiers = [
  "Development Status :: 4 - Beta",
  "Framework :: Django",
  "Framework :: Django :: 4.1",
  "Framework :: Django :: 4.2",
  "Framework :: Django :: 5.0",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: BSD License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Typing :: Typed",
]
dynamic = [
  "version",
]
dependencies = [
  "abcattrs",
  "httpx>=0.28.1",
]
optional-dependencies.dev = [
  "bankid-sdk[test]",
  "mypy",
  "pre-commit",
]
optional-dependencies.django = [
  "django",
]
optional-dependencies.test = [
  "bankid-sdk[django]",
  "dirty-equals",
  "django-stubs",
  "freezegun",
  "pytest",
  "pytest-asyncio",
  "pytest-cov",
  "pytest-django",
  "pytest-randomly",
  "respx",
]
urls.Homepage = "https://github.com/5monkeys/bankid-sdk"
urls.Source = "https://github.com/5monkeys/bankid-sdk"
urls.Tracker = "https://github.com/5monkeys/bankid-sdk/issues"

[tool.hatch]
build.hooks.vcs.version-file = "src/bankid_sdk/_version.py"
version.source = "vcs"

[tool.black]
target-version = ["py39"]

[tool.ruff]
src = ["src", "tests"]
fix = true
target-version = "py39"
line-length = 88
select = [
  "B",
  "BLE",
  "C4",
  "C9",
  "C90",
  "DJ006",
  "DJ007",
  "DJ012",
  "DTZ",
  "E",
  "EXE",
  "F",
  "FA",
  "FBT",
  "I",
  "INP",
  "ISC",
  "PGH",
  "PIE",
  "PL",
  "PT",
  "PTH",
  "RET",
  "RSE",
  "RUF",
  "S",
  "SIM",
  "SLOT",
  "T10",
  "T20",
  "TID",
  "TRY",
  "UP",
  "W",
  "YTT"
]
ignore = [
  # We've deemed ourselves good designers of our interfaces and would only have
  # motivated ignores.
  "PLR0913",
  "RET505",  # Don't like this opinion
  "S101",
  "TRY003",  # Don't care about length of messages for exception classes
]

[tool.ruff.per-file-ignores]
"tests/**" = ["PLR2004", "S105", "S106"]

[tool.ruff.isort]
known-first-party = ["bankid_sdk", "tests"]
combine-as-imports = true

[tool.pytest.ini_options]
testpaths = ["tests", "src"]
addopts = "--cov --no-cov-on-fail"
asyncio_mode = "auto"

[tool.coverage.paths]
source = [
  "src/bankid_sdk",
  ".tox/*/lib/*/site-packages/bankid_sdk",
]

[tool.coverage.report]
skip_covered = true
show_missing = true
exclude_also = [
  # ignore non-implementations
  '^\s*\.\.\.',
  "if TYPE_CHECKING:",
  '^\s*(def\s)?assert_never(.*)$',
]
fail_under = 100

[tool.coverage.run]
parallel = true
branch = true
source = ["bankid_sdk", "tests"]

[tool.mypy]
python_version = "3.9"
pretty = true
show_error_codes = true
files = "src, tests"

no_implicit_optional = true
strict_optional = true
ignore_missing_imports = false
warn_unreachable = true
strict = true
