[build-system]
build-backend = "hatchling.build"
requires = [
  "hatch-vcs",
  "hatchling",
]

[project]
name = "bankid-sdk"
description = "A Python SDK for BankID"
readme = "README.md"
keywords = [
  "bankid",
  "client",
  "django",
  "rest",
]
license = { file = "LICENSE" }
authors = [ { name = "Jonas Lundberg", email = "jonas@5monkeys.se" } ]
requires-python = ">=3.10"
classifiers = [
  "Development Status :: 4 - Beta",
  "Framework :: Django",
  "Framework :: Django :: 4.1",
  "Framework :: Django :: 4.2",
  "Framework :: Django :: 5.0",
  "Framework :: Django :: 5.1",
  "Framework :: Django :: 5.2",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: BSD License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Typing :: Typed",
]
dynamic = [
  "version",
]
dependencies = [
  "abcattrs",
  "httpx>=0.28.1",
]
optional-dependencies.dev = [
  "bankid-sdk[test]",
  "mypy",
  "pre-commit",
]
optional-dependencies.django = [
  "django",
]
optional-dependencies.test = [
  "bankid-sdk[django]",
  "dirty-equals",
  "django-stubs",
  "freezegun",
  "pytest",
  "pytest-asyncio",
  "pytest-cov",
  "pytest-django",
  "pytest-randomly",
  "respx",
]
urls.Homepage = "https://github.com/5monkeys/bankid-sdk"
urls.Source = "https://github.com/5monkeys/bankid-sdk"
urls.Tracker = "https://github.com/5monkeys/bankid-sdk/issues"

[tool.hatch]
build.hooks.vcs.version-file = "src/bankid_sdk/_version.py"
version.source = "vcs"

[tool.black]
target-version = [ "py310" ]

[tool.ruff]
target-version = "py310"
line-length = 88
src = [ "src", "tests" ]
fix = true

lint.select = [
  "B",
  "BLE",
  "C4",
  "C9",
  "C90",
  "DJ006",
  "DJ007",
  "DJ012",
  "DTZ",
  "E",
  "EXE",
  "F",
  "FA",
  "FBT",
  "I",
  "INP",
  "ISC",
  "PGH",
  "PIE",
  "PL",
  "PT",
  "PTH",
  "RET",
  "RSE",
  "RUF",
  "S",
  "SIM",
  "SLOT",
  "T10",
  "T20",
  "TID",
  "TRY",
  "UP",
  "W",
  "YTT",
]
lint.ignore = [
  # We've deemed ourselves good designers of our interfaces and would only have
  # motivated ignores.
  "PLR0913",
  "RET505",  # Don't like this opinion
  "S101",
  "TRY003",  # Don't care about length of messages for exception classes
]
lint.per-file-ignores."tests/**" = [ "PLR2004", "S105", "S106" ]
lint.isort.combine-as-imports = true
lint.isort.known-first-party = [ "bankid_sdk", "tests" ]

[tool.pytest.ini_options]
testpaths = [ "tests", "src" ]
addopts = "--cov --no-cov-on-fail"
asyncio_mode = "auto"

[tool.coverage.paths]
source = [
  "src/bankid_sdk",
  ".tox/*/lib/*/site-packages/bankid_sdk",
]

[tool.coverage.report]
skip_covered = true
show_missing = true
exclude_also = [
  # ignore non-implementations
  '^\s*\.\.\.',
  "if TYPE_CHECKING:",
  '^\s*(def\s)?assert_never(.*)$',
]
fail_under = 100

[tool.coverage.run]
parallel = true
branch = true
source = [ "bankid_sdk", "tests" ]

[tool.mypy]
python_version = "3.10"
pretty = true
show_error_codes = true
files = "src, tests"

no_implicit_optional = true
strict_optional = true
ignore_missing_imports = false
warn_unreachable = true
strict = true
